@startuml class-diagram
!pragma layout smetana
!theme plain
skinparam shadowing false
skinparam classAttributeIconSize 0

title Diagrama de Classes — Modelo de Dominio\nSigBah! (app/domain/ + contratos de application/)

' ============================================================
' VALUE OBJECTS
' ============================================================

class StudentInfo {
    - gender: Literal[0, 1]
    - name: str
    - cpf: str | None
    - birth_date: date | None
    - email: EmailStr | None
    + to_tuple(): tuple
}

class MemberInfo {
    - gender: Literal[0, 1]
    - name: str
    - institution: str
    - location: str
    - lang: Literal["pt", "en"]
    - email: EmailStr | None
    - remoto: bool
    - ppg: str | None
    - bolsista_cnpq: bool | None
    - nivel_cnpq: str | None
    - lattes: str | None
    - doctorate_institution: str | None
    - doctorate_year: int | None
    + to_tuple(): tuple
}

' ============================================================
' AGGREGATE ROOT (Request)
' ============================================================

class BancaRequest {
    - ppg: Literal["ppgfis", "ppgenfis"]
    - nome: StudentInfo
    - tipo: Literal[1, 2, 3]
    - data: date
    - horario: time
    - modalidade: Literal["presencial","hibrida","remota"]
    - sala_preferencia: str | None
    - link: str | None
    - data_parecer: date | None
    - orientador: MemberInfo
    - coorientador: MemberInfo | None
    - externo1..2: MemberInfo | None
    - interno1..2: MemberInfo | None
    - supl_int / supl_ext: MemberInfo | None
    - titulo: str
    - titulo2: str | None
    - comentario_desempenho: str | None
    - justificativa_membros: str | None
}

' ============================================================
' VERSIONING + PERSISTED RECORD
' ============================================================

class BancaVersion {
    - version: int
    - request: BancaRequest
    - created_at: datetime
}

class InviteStatus {
    - sent: bool
    - sent_at: datetime | None
    - recipient: str | None
}

class BancaRecord {
    - versions: list[BancaVersion]
    - current_version: int
    - decision_token: str
    - status: BancaStatus
    - rejection_reason: str | None
    - approval_observation: str | None
    - ata: int
    - ppg: str
    - created_at: datetime
    - decided_at: datetime | None
    - invite_status: dict[str, InviteStatus]
    + request: BancaRequest <<property>>
}

enum BancaStatus {
    pending
    approved
    rejected
}

' ============================================================
' FILE / DOCUMENT MODELS
' ============================================================

enum DocumentKind {
    ata
    carta_convite
    parecer
    cartaz
    relatoria_avaliacao
}

enum MemberRole {
    orientador / coorientador
    externo1 / externo2
    interno1 / interno2
    supl_int / supl_ext
}

class FileManifestEntry {
    - id: str
    - label: str
    - kind: DocumentKind
    - member_role: MemberRole | None
}

class AttachmentUpload {
    - filename: str
    - content: bytes
    - content_type: str
    - kind: str
    - member_role: str | None
}

' ============================================================
' INVITE / AUTH MODELS
' ============================================================

class InviteItem {
    - item_id: str
    - kind: InviteKind
    - label: str
    - member_role: MemberRole | None
    - member_name: str | None
    - recipient: str | None
    - sent: bool
    - sent_at: datetime | None
}

class AdminUserRecord {
    - username: str
    - ppg: str
    - password_hash: str
}

class CurrentUser {
    - username: str
    - ppg: str
}

' ============================================================
' REPOSITORIES (INTERFACE + IMPLEMENTACAO)
' ============================================================

interface BancaRepository <<interface>> {
    + save(req): Result[str, Error]
    + find_by_token(token): Result[BancaRecord, Error]
    + update_decision(token, status, reason, observation): Result[None, Error]
    + list(filters): Result[list[BancaListItem], Error]
    + append_version(token, req): Result[int, Error]
    + set_invite_status(token, item_id, status): Result[None, Error]
}

class MongoBancaRepository {
    - _collection: Collection
}

interface UserRepository <<interface>> {
    + find_by_username(username): Result[AdminUserRecord | None, Error]
    + upsert(user): Result[None, Error]
}

class MongoUserRepository {
    - _collection: Collection
}

' ============================================================
' SERVICES (application/)
' ============================================================

class BancaService {
    - _repo: BancaRepository
    + submit_petition(req, attachments): Result[BancaSubmitResponse, Error]
    + get_summary(token): Result[BancaSummary, Error]
    + approve(token, observation): Result[BancaDecisionResponse, Error]
    + reject(token, reason): Result[BancaDecisionResponse, Error]
}

class AdminBancaService {
    - _repo: BancaRepository
    + list_bancas(filters): Result[..., Error]
    + get_detail(token): Result[BancaAdminDetail, Error]
    + update_banca(token, new_req): Result[BancaUpdateResponse, Error]
    + list_files(token, version): Result[list[FileManifestEntry], Error]
    + download_files(token, ids, version): Result[tuple, Error]
}

class InviteService {
    - _repo: BancaRepository
    + list_invites(token): Result[list[InviteItem], Error]
    + send_invites(token, item_ids): Result[SendInvitesResponse, Error]
}

class AuthService {
    - _repo: UserRepository
    + seed_default_users(): Result[None, Error]
    + login(username, password): Result[LoginResponse, Error]
}

note as N_HELPERS
  Modulos funcionais de application/:
  - document_service: gera PDFs por PPG
    (criaBancas / criaBancasEnfis)
  - attachment_service: persiste/recupera anexos
  - petition_service: monta assunto/HTML dos e-mails
  - email_service: envio SMTP (com anexos)
  - banca_validation: regras de submissao por PPG
  - ppg_profiles (config): perfil por PPG
end note

' ============================================================
' ERROR HIERARCHY
' ============================================================

abstract class BancaError {
    - message: str
}
class DocumentGenerationError
class EmailError {
    - recipient: str
}
class PersistenceError
class ValidationError {
    - details: list[str]
}
class AuthError
class ForbiddenError
class BancaNotFoundError
class BancaAlreadyDecidedError {
    - current_status: str
}
class BancaNotEditableError {
    - current_status: str
}
class BancaVersionNotFoundError {
    - version: int
}

' ============================================================
' RELACIONAMENTOS
' ============================================================

BancaRequest *-- "1" StudentInfo : nome
BancaRequest *-- "1..8" MemberInfo : membros
BancaVersion *-- "1" BancaRequest : request
BancaRecord *-- "1..*" BancaVersion : versions
BancaRecord *-- "0..*" InviteStatus : invite_status
BancaRecord --> BancaStatus : status

FileManifestEntry --> DocumentKind : kind
FileManifestEntry --> MemberRole : member_role
InviteItem --> MemberRole : member_role

MongoBancaRepository ..|> BancaRepository
MongoUserRepository ..|> UserRepository

BancaService --> BancaRepository : <<use>>
AdminBancaService --> BancaRepository : <<use>>
InviteService --> BancaRepository : <<use>>
AuthService --> UserRepository : <<use>>

DocumentGenerationError --|> BancaError
EmailError --|> BancaError
PersistenceError --|> BancaError
ValidationError --|> BancaError
AuthError --|> BancaError
ForbiddenError --|> BancaError
BancaNotFoundError --|> BancaError
BancaAlreadyDecidedError --|> BancaError
BancaNotEditableError --|> BancaError
BancaVersionNotFoundError --|> BancaError

@enduml
